tests/ui/parser/bounds-type.stderr
error: `for<...>` binder not allowed with `?` trait polarity modifier
  --> $DIR/bounds-type.rs:9:16
   |
LL |     T: for<'a> ?Trait,
   |           ---- ^
   |           |
   |           there is not a well-defined meaning for a higher-ranked `?` trait

error: `?` may only modify trait bounds, not lifetime bounds
  --> $DIR/bounds-type.rs:11:8
   |
LL |     T: ?'a,
   |        ^

error: `~const` trait not allowed with `?` trait polarity modifier
  --> $DIR/bounds-type.rs:14:15
   |
LL |     T: ~const ?Tr,
   |        ------ ^
   |        |
   |        there is not a well-defined meaning for a `~const ?` trait

error: `~const` may only modify trait bounds, not lifetime bounds
  --> $DIR/bounds-type.rs:16:8
   |
LL |     T: ~const 'a,
   |        ^^^^^^

error: `const` may only modify trait bounds, not lifetime bounds
  --> $DIR/bounds-type.rs:17:8
   |
LL |     T: const 'a,
   |        ^^^^^

error: `async` trait not allowed with `?` trait polarity modifier
  --> $DIR/bounds-type.rs:20:14
   |
LL |     T: async ?Tr,
   |        ----- ^
   |        |
   |        there is not a well-defined meaning for a `async ?` trait

error: `async` may only modify trait bounds, not lifetime bounds
  --> $DIR/bounds-type.rs:22:8
   |
LL |     T: async 'a,
   |        ^^^^^

error: `const async` trait not allowed with `?` trait polarity modifier
  --> $DIR/bounds-type.rs:25:20
   |
LL |     T: const async ?Tr,
   |        ----------- ^
   |        |
   |        there is not a well-defined meaning for a `const async ?` trait

error: `const` may only modify trait bounds, not lifetime bounds
  --> $DIR/bounds-type.rs:27:8
   |
LL |     T: const async 'a,
   |        ^^^^^

error: aborting due to 9 previous errors

